--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
         <div class="topnav" id="myTopnav">
             <a href="#" class="active" id="home">Home</a>
-            <a href="./accommodation/accommodation.html">Accommodation</a>
-            <a href="./about/about.html">About</a>
-            <a href="./blog/blog.html">Blog</a>
-            <a href="./contact/contact.html">Contact</a>
+            <a href="accommodation/accommodation.html">Accommodation</a>
+            <a href="about/about.html">About</a>
+            <a href="blog/blog.html">Blog</a>
+            <a href="contact/contact.html">Contact</a>
             <a href="javascript:void(0);" class="icon" onclick="navBar()">
                 <i class="fa fa-bars"></i>
             </a>
