--- a/about/about.html
+++ b/about/about.html
@@ -59,20 +59,20 @@
                     </div>
                 </div>
                 <div class="img-cont">
-                    <img src="../images/mansion.png" alt="home-img" class="home-img">
+                    <img src="../images/mansion.png" alt="home-img" class="home-img home-img1">
                 </div>
             </div>
         </section>
         <section>
             <div class="main-cont">
-                <div class="explore1">
+                <div class="explore1" id="explore2">
                     <h1>Professional Support</h1>
                     <div class="sign">
                         <p>At Comfy Domicile, we are always available to attend to our clients 24/7.Contact us, anytime, anyday and we are ready to excellently render necessary service(s) you might need. Hoping to meet you soon.</p>
                     </div>
                 </div>
-                <div class="img-cont">
-                    <img src="../images/support1.png" alt="home-img" class="home-img">
+                <div class="img-cont" id="img-cont">
+                    <img src="../images/support1.png" alt="home-img" class="home-img" id="home-img">
                 </div>
             </div>
         </section>
@@ -96,7 +96,7 @@
                     <p>Comfy Domicile is the right agency to profer solution to getting the best residence of your choice in any state of the federation.We promise not to dissappoint you, as your comfort dwelling is our number one priority.</p>
                 </div>
             </div>
-            <div class="img-cont">
+            <div class="img-cont" id="img-cont">
                 <img src="../images/support.png" alt="home-img" class="home-img">
             </div>
         </div>
