--- a/accommodation/accomm_details/accom_detail_two/detail_two.html
+++ b/accommodation/accomm_details/accom_detail_two/detail_two.html
@@ -39,7 +39,7 @@
         <section class="info-wrap">
             <div class="info1">
                
-                <div class="order">
+                <div class="order" id="order">
                      <a href="../order/order.html"><p>Ordering Details</p></a>
                 </div>
                 <div class="order">
@@ -63,16 +63,16 @@
                     <img src="/images/mansion.png" alt="bungalow-img" class="bungalow-img">
                     <p>Mansion</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure2">4</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">8</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p  class="figure">Available</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Lagos</p>
                 </div>
             </div>
@@ -83,16 +83,16 @@
                     <p>Mansion</p>
 
                 </div>
-                <div class="figure2">
+                <div class="figure2 bungalow-info">
                     <p>5</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">9</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure">occupied</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Abia</p>
                 </div>
             </div>
@@ -104,16 +104,16 @@
                     <p>Mansion</p>
 
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure2">4</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">6</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure">Available</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Bauchi</p>
                 </div>
             </div>
