--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     
                     <div class="img-cont">
-                        <img src="./images/duplex4.png" alt="home-img" class="home-img">
+                        <img src="./images/terraced1.png" alt="home-img" class="home-img">
                     </div>
                 </div>
             </section>
