--- a/accommodation/accomm_details/accom_detail_one/detail_one.html
+++ b/accommodation/accomm_details/accom_detail_one/detail_one.html
@@ -39,7 +39,7 @@
         <section class="info-wrap">
             <div class="info1">
                
-                <div class="order">
+                <div class="order" id="order">
                      <a href="../order/order.html"><p>Ordering Details</p></a>
                 </div>
                 <div class="order">
@@ -63,16 +63,16 @@
                     <img src="/images/duplex2.png" alt="bungalow-img" class="bungalow-img">
                     <p>Duplex</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure2">3</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">6</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p  class="figure">Available</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Delta</p>
                 </div>
             </div>
@@ -83,16 +83,16 @@
                     <p>Duplex</p>
 
                 </div>
-                <div class="figure2">
+                <div class="figure2 bungalow-info">
                     <p>4</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">7</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure">occupied</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Imo</p>
                 </div>
             </div>
@@ -104,13 +104,13 @@
                     <p>Duplex</p>
 
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure2">3</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">8</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure">Available</p>
                 </div>
                 <div>
