--- a/accommodation/accomm_details/details.html
+++ b/accommodation/accomm_details/details.html
@@ -39,7 +39,7 @@
         <section class="info-wrap">
             <div class="info1">
                
-                <div class="order">
+                <div class="order" id="order">
                      <a href="../accomm_details/order/order.html"><p>Ordering Details</p></a>
                 </div>
                 <div class="order">
@@ -63,16 +63,16 @@
                     <img src="/images/bungalow6.png" alt="bungalow-img" class="bungalow-img">
                     <p>Bungalow</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure2">2</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">5</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p  class="figure">Available</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Abuja</p>
                 </div>
             </div>
@@ -83,16 +83,16 @@
                     <p>Bungalow</p>
 
                 </div>
-                <div class="figure2">
+                <div class="figure2 bungalow-info">
                     <p>3</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">4</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure">occupied</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Lagos</p>
                 </div>
             </div>
@@ -104,16 +104,16 @@
                     <p>Bungalow</p>
 
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure2">1</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure5">3</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p class="figure">Available</p>
                 </div>
-                <div>
+                <div class="bungalow-info">
                     <p>Ibadan</p>
                 </div>
             </div>
